clusters/test.tentonpenguin.co.uk/addons/kubernetes-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  rules:
  - host: test.tentonpenguin.co.uk
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 8080
